--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 .header{
     width:500px;
     height: 500px;
-    border: 1px solid red;
+    border: 1px dashed blue;
 }
+
+.header__title{
+    font-family: Georgia, serif;
+
+}
+
